--- a/.env.example
+++ b/.env.example
@@ -161,6 +161,7 @@ SEARXNG_HOSTNAME=searxng.yourdomain.com
 SUPABASE_HOSTNAME=supabase.yourdomain.com
 WEAVIATE_HOSTNAME=weaviate.yourdomain.com
 WEBUI_HOSTNAME=webui.yourdomain.com
+DENTIST_HOSTNAME=dentist.yourdomain.com
 
 # Everything below this point is optional.
 # Default values will suffice unless you need more features/customization.
