--- a/Caddyfile
+++ b/Caddyfile
@@ -9,7 +9,10 @@
     # For localhost/port addresses, HTTPS won't be enabled
     reverse_proxy n8n:5678
 }
-
+# dentist
+{$DENTIST_HOSTNAME} {
+    reverse_proxy dentist:8080
+}
 # Open WebUI
 {$WEBUI_HOSTNAME} {
     reverse_proxy open-webui:8080
