--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,7 +93,7 @@ x-init-ollama: &init-ollama
 
 services:
   dentist:
-    image: lucasfuelling/dentist-kanban-flow:v.1.0
+    image: lucasfuelling/dentist-kanban-flow:v1.0
     restart: unless-stopped
     container_name: dentist-kanban-flow
     profiles: ["dentist-kanban-flow"]
