--- a/.env.example
+++ b/.env.example
@@ -382,7 +382,7 @@ DIFY_EXPOSE_NGINX_PORT=8080
 DIFY_EXPOSE_NGINX_SSL_PORT=9443
 
 ###########################################################################################
-COMPOSE_PROFILES="n8n,flowise,monitoring"
+COMPOSE_PROFILES="n8n, supabase"
 PROMETHEUS_PASSWORD_HASH=
 SEARXNG_PASSWORD_HASH=
 COMFYUI_PASSWORD_HASH=
